opam-version: "1.2"
name: "libclang"
version: "~unknown"
maintainer: "cedlemo <cedlemo@gmx.com>"
authors: "cedlemo <cedlemo@gmx.com>"
homepage: "https://github.com/cedlemo/OCaml-libclang"
bug-reports: "https://github.com/cedlemo/OCaml-libclang/issues"
license: "GPL3"
dev-repo: "https://github.com/cedlemo/OCaml-libclang"
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "ounit"
  "ctypes"
  "ctypes-foreign"
  "shcaml"
]
